--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "transformers>=4.51.3",  # Pinned for vLLM
     "vllm==0.8.5",
 
+    "datasets>=3.6.0",
+    "openai>=1.59.6",
+    
     "spacy",
     "faiss-cpu",
 ]
