implement rag=based llm as a judge

--- a/configs/factscore-mini.wildhallu.yaml
+++ b/configs/factscore-mini.wildhallu.yaml
@@ -4,8 +4,9 @@ data_split: wild_hallucinations
 model_name_extraction: openai::gpt-4.1-mini
 model_name_verification: openai::gpt-4.1-mini
 search_model_name: bm25-only
+search_tokenizer_name: null
 search_chunk_size: 100
 search_num_chunks: 10
 search_num_processes: 1
 length_penalty_threshold: 10
-max_samples: 100
+max_samples: 500
