--- a/configs/factscore-mini.factscore.yaml
+++ b/configs/factscore-mini.factscore.yaml
@@ -1,7 +1,7 @@
 scorer: factscore
 data_name: chentong00/fact-eval-data-factscore
 data_split: train
-model_name_extraction: openai::gpt-4.1-mini
+model_name_extraction: openai::gpt-4.1
 model_name_verification: openai::gpt-4.1-mini
 search_model_name: bm25-only
 search_chunk_size: 100
