--- a/configs/factscore-mini.wildhallu.yaml
+++ b/configs/factscore-mini.wildhallu.yaml
@@ -1,6 +1,6 @@
 scorer: factscore
-data_name: tongc-allenai/fact-eval-data
-data_split: wild_hallucinations
+data_name: chentong00/fact-eval-data-wildhallu
+data_split: train
 model_name_extraction: openai::gpt-4.1
 model_name_verification: openai::gpt-4.1-mini
 search_model_name: bm25-only
@@ -9,4 +9,4 @@ search_chunk_size: 100
 search_num_chunks: 10
 search_num_processes: 1
 length_penalty_threshold: 10
-max_samples: 500
+max_samples: 100
